* Adding #114 info panel that shows source details (thanks to leonardyan)
* Adding #117 support for text based burn in subtitles
* Adding #152 option to switch back to old bubbly buttons (thanks to GitKike98)
* Adding logging level selector in settings for GUI
* Adding button to extract text based subtitles
* Adding dual pass option for ffmpeg options (thanks to Catatau)
* Changing all builds to use Python 3.8, removing idea of "legacy" windows until later time
* Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
* Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
* Fixing #120 Custom bitrate forgets to add a "k" (thanks to seighail3)
* Fixing #162 Main window was not resizeable (thanks to bmcassagne)
* Fixing snap packaged, and other symlinked FFmpeg installs were not linked correctly (thanks to Catatau)
* Fixing loading video could encounter a bug and crash fastflix (thanks to Jan)
* Fixing being able to set landscape cover
* Fixing resetting covers from queue

## Version 4.0.4

* Fixing #137 Should not be able to try and switch between encoders without a video (thanks to leonardyan)
* Fixing #149 Cannot set subtitle disposition in 4.0+ (thanks to Zeid164)
* Fixing #150 FFmpeg extras not able to be set (thanks to kipperdawn)
* Fixing exact / fast time selector not working
* Fixing subtitle burn in not working (for picture images)
* Fixing that text based subtitles could show as being burned-in-able
* Fixing HEVC tune did not put space after itself in command

## Version 4.0.3

* Fixing #146 Extraneous "None" when remove HDR is selected (thanks to Chad Johnson)

## Version 4.0.2

* Fixing #144 Remove HDR not working (thanks to Chad Johnson)
* Fixing #135 color information wasn't passed through correctly (thanks to leonardyan)
* Fixing #143 by adding legacy windows builds with Python 3.8 for time being (thanks to odignal)