@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 import uuid
 from pathlib import Path
-from typing import List, Union
+from typing import List, Union, Optional
 
 from box import Box
 from pydantic import BaseModel, Field
@@ -25,11 +25,11 @@ __all__ = ["VideoSettings", "Status", "Video"]
 
 
 class VideoSettings(BaseModel):
-    crop: Union[str, None] = None
+    crop: Optional[str] = None
     start_time: Union[float, int] = 0
     end_time: Union[float, int] = 0
     fast_seek: bool = True
-    rotate: Union[str, None] = None
+    rotate: int = 0
     vertical_flip: bool = False
     horizontal_flip: bool = False
     remove_hdr: bool = False
@@ -38,19 +38,19 @@ class VideoSettings(BaseModel):
     video_title: str = ""
     selected_track: int = 0
     output_path: Path = None
-    scale: Union[str, None] = None
+    scale: Optional[str] = None
     deinterlace: bool = False
     video_speed: Union[float, int] = 1
     tone_map: str = "hable"
-    denoise: Union[str, None] = None
-    deblock: Union[str, None] = None
+    denoise: Optional[str] = None
+    deblock: Optional[str] = None
     deblock_size: int = 4
-    color_space: Union[str, None] = None
-    color_transfer: Union[str, None] = None
-    color_primaries: Union[str, None] = None
-    source_fps: Union[str, None] = None
-    output_fps: Union[str, None] = None
-    vsync: Union[str, None] = None
+    color_space: Optional[str] = None
+    color_transfer: Optional[str] = None
+    color_primaries: Optional[str] = None
+    source_fps: Optional[str] = None
+    output_fps: Optional[str] = None
+    vsync: Optional[str] = None
     video_encoder_settings: Union[
         x265Settings,
         x264Settings,
