@@ -9,11 +9,13 @@
 * Adding logging level selector in settings for GUI
 * Adding button to extract text based subtitles
 * Adding dual pass option for ffmpeg options (thanks to Catatau)
+* Adding #163 elapsed time in encoding panel (thanks to Benedicte Emilie Brækken)
 * Changing all builds to use Python 3.8, removing idea of "legacy" windows until later time
 * Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
 * Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
 * Fixing #120 Custom bitrate forgets to add a "k" (thanks to seighail3)
 * Fixing #162 Main window was not resizeable (thanks to bmcassagne)
+* Fixing #165 Custom Bitrate loaded from Profile (thanks to Etz)
 * Fixing snap packaged, and other symlinked FFmpeg installs were not linked correctly (thanks to Catatau)
 * Fixing loading video could encounter a bug and crash fastflix (thanks to Jan)
 * Fixing being able to set landscape cover
